[package]
authors = [
    "Darrik Moberg <30670444+mdarrik@users.noreply.github.com>",
    "aaron-hardin <aaronrhardin@gmail.com>",
    "James Waples <james@wapl.es>",
]
categories = ["embedded", "no-std"]
description = "I2C/SPI driver for the SH1107 OLED display controller"
documentation = "https://docs.rs/sh1107"
exclude = [".travis.yml", ".gitignore"]
keywords = ["no-std", "sh1107", "oled", "embedded", "embedded-hal-driver"]
license = "MIT OR Apache-2.0"
name = "sh1107"
readme = "README.md"
repository = "https://github.com/mdarrik/sh1107"
version = "0.4.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["thumbv7m-none-eabi", "thumbv7em-none-eabihf"]

[dependencies]
embedded-hal = "0.2.3"
embedded-graphics-core = { version = "0.3.2", optional = true }

[dev-dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.10"
embedded-graphics = "0.7.1"
heapless = "0.7.10"
panic-semihosting = "0.5.2"
cortex-m-rtic = "0.5.9"

[dev-dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["rt", "stm32f103"]

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

[patch.crates-io]
embedded-graphics = { git = "https://github.com/embedded-graphics/embedded-graphics" }
embedded-graphics-core = { git = "https://github.com/embedded-graphics/embedded-graphics" }

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
